# bahasa-loanword-detection

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  indonesian_wordforms.csv  pyproject.toml  requirements.txt
notebooks/data/: loanwords.ipynb  phonemes.ipynb
notebooks/model/: GRU-NN-overview.ipynb
src/cli/: cli.py  utils.py
src/data/: etl.py  models.py  wold.py
src/models/: markov.py  svm.py
src/models/GRU/: nn_loanwords.py  nn_loanwords_run.py
src/models/gru/: nn.py
src/models/gru nn/: best_model_state.pt
tests/: conftest.py  test_etl.py  test_loanwordspy.py  test_wold.py
