[tool.poetry]
name = "loanwordspy"
version = "0.1.0"
description = ""
authors = ["Steph Samson <hello@stephsamson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pycldf = "^1.18.0"
bonobo = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
