[tool.poetry]
name = "loanwordspy"
version = "0.1.0"
description = ""
authors = ["Steph Samson <hello@stephsamson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pycldf = "^1.18.0"
pandas = "^1.2.1"
sklearn = "^0.0"
bonobo = "0.7.0rc3"
jupyterlab = "^3.0.8"
attrs = "^20.3.0"
matplotlib = "^3.3.4"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
